css fixed for overflowing report

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -5,5 +5,6 @@
     height: 100vh;
     padding: 10vh clamp(100px, 5vh, 800px);
     padding-left: 0;
+    padding-right: 0;
 }
 
