--- a/client/src/views/main/main.module.scss
+++ b/client/src/views/main/main.module.scss
@@ -1,5 +1,6 @@
 .content {
     padding: 40px 80px;
+    padding-right: 0;
     position: relative;
     width: 100%;
 
